--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,17 @@
+ChangeLog 12/01/2025
+Client v1.1.0-b (Beta)
+
+Optimizations
+- Foram feitas algumas otimizações, aumentando o FPS sem quedas;
+- Melhoria na conexão, utilizando a mesma thread da primeira conexão.
+- Ao ativar o FPS Boost da modpack, estará removendo todas as particulas.
+
+Crash
+- Corrigido crash do "pauseOnLostFocus".
+
+AntiCheat
+- Correções de Falsos Positivos.
+
 Changelog 01/01/2025
 Client v1.0.0-b (Beta)
 
