--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,11 @@
-📌 ChangeLog – 15/09/2025
+Changelog – 15/09/2025
 Client v1.0.0
 
-🚀 Melhorias
-- Grandes otimizações de performance realizadas (mais de 50 classes revisadas e aprimoradas).
+Melhorias
+- Grandes otimizacoes de performance realizadas (mais de 50 classes revisadas e aprimoradas).
 - Novo comando /mudarskin para alterar sua skin diretamente no cliente.
-- Novo comando /pontacabeca adicionado para personalização extra in-game.
+- Novo comando /pontacabeca adicionado para personalizacao extra in-game.
 
-🛠️ Correções
+Correcoes
 - AntiCheat revisado: corrigida a vulnerabilidade que permitia burlar usando ArtMoney.
-- Resolvido o problema de queda de FPS, garantindo uma experiência mais estável e fluida.
+- Resolvido o problema de queda de FPS, garantindo uma experiencia mais estavel e fluida.
