--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+Changelog – 24/10/2025
+Client v1.0.2
+
+Melhorias
+- Otimizado.
+
+Correcoes
+- AntiCheat revisado: corrigida a vulnerabilidade que permitia burlar usando ArtMoney.
+- Macro de acrobacia funcionando.
+
 Changelog – 17/09/2025
 Client v1.0.1
 
